--- a/index.html
+++ b/index.html
@@ -238,27 +238,27 @@
         <ul class="lista__rodape">
             <li class="lista__titulo">cassino online</li>
             <li class="lista__item">
-                <img src="img/Alura.svg" alt="">
+                <img src="Alura.svg" alt="">
                 <a href="#" class="lista__link">Market</a>
             </li>
             <li class="lista__item">
-                <img src="img/AluraEmpresas.svg" alt="">
+                <img src="AluraEmpresas.svg" alt="">
                 <a href="#" class="lista__link">Villagers para empresas</a>
             </li>
             <li class="lista__item">
-                <img src="img/AluraLatam.svg" alt="">
+                <img src="AluraLatam.svg" alt="">
                 <a href="#" class="lista__link">NetherHub LATAM</a>
             </li>
             <li class="lista__item">
-                <img src="img/AluraStart.svg" alt="">
+                <img src="AluraStart.svg" alt="">
                 <a href="#" class="lista__link">Market Start</a>
             </li>
             <li class="lista__item">
-                <img src="img/MusicDot.svg" alt="">
+                <img src="MusicDot.svg" alt="">
                 <a href="#" class="lista__link">MusicDot</a>
             </li>
             <li class="lista__item">
-                <img src="img/AluraLingua.svg" alt="">
+                <img src="AluraLingua.svg" alt="">
                 <a href="#" class="lista__link">Língua das Runas</a>
             </li>
             <li class="lista__item">
@@ -270,31 +270,31 @@
         <ul class="lista__rodape">
             <li class="lista__titulo">Comunidade</li>
             <li class="lista__item">
-                <img src="img/HipstersJobs.svg" alt="">
+                <img src="HipstersJobs.svg" alt="">
                 <a href="#" class="lista__link">Hipsters da jungle</a>
             </li>
             <li class="lista__item">
-                <img src="img/Scuba.svg" alt="">
+                <img src="Scuba.svg" alt="">
                 <a href="#" class="lista__link">sequestre o DEV</a>
             </li>
             <li class="lista__item">
-                <img src="img/Layers.svg" alt="">
+                <img src="Layers.svg" alt="">
                 <a href="#" class="lista__link">Layers de redstone</a>
             </li>
             <li class="lista__item">
-                <img src="img/LikeABoss.svg" alt="">
+                <img src="LikeABoss.svg" alt="">
                 <a href="#" class="lista__link">Like a Boss</a>
             </li>
             <li class="lista__item">
-                <img src="img/CarreiraSemFronteira.svg" alt="">
+                <img src="CarreiraSemFronteira.svg" alt="">
                 <a href="#" class="lista__link">Carreira sem fronteira</a>
             </li>
             <li class="lista__item">
-                <img src="img/HipstersJobs.svg" alt="">
+                <img src="HipstersJobs.svg" alt="">
                 <a href="#" class="lista__link">Hipsters do job</a>
             </li>
             <li class="lista__item">
-                <img src="img/GUJ.svg" alt="">
+                <img src="GUJ.svg" alt="">
                 <a href="#" class="lista__link">GOKU</a>
             </li>
         </ul>
